--- a/web/sites/default/config/media.type.document.yml
+++ b/web/sites/default/config/media.type.document.yml
@@ -17,7 +17,4 @@ queue_thumbnail_downloads: false
 new_revision: true
 source_configuration:
   source_field: field_document
-field_map:
-  name: name
-  mimetype: field_document
-  filesize: field_document
+field_map: {  }
