--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         "drupal/google_analytics": "^2.3",
         "drupal/group": "^1.0",
         "drupal/hsts": "^1.0",
+        "drupal/htmlpurifier": "^1.0@RC",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/link_class": "^1.3",
         "drupal/linkit": "^4.3",
