--- a/web/sites/default/config/core.entity_view_display.node.building.address.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.address.yml
@@ -5,9 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.node.address
     - field.field.node.building.field_address
+    - field.field.node.building.field_legacy_path
     - node.type.building
   module:
     - address
+    - ds
     - panelizer
     - user
 third_party_settings:
@@ -16,6 +18,16 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - field_address
 id: node.building.address
 targetEntityType: node
 bundle: building
@@ -30,5 +42,6 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_legacy_path: true
   links: true
   scheduled_publication: true
