--- a/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
@@ -26,23 +26,31 @@ third_party_settings:
       library: layout_discovery/onecol
       disable_css: false
       entity_classes: all_classes
-      settings:
-        classes: {  }
-        wrappers:
-          content: div
-        outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
-        link_custom: ''
+      settings: {  }
     regions:
       content:
-        - field_building
-        - field_legacy_path
+        - node_title
         - field_summary
+        - field_building
         - field_floor
         - field_open_hours
         - service_location_directions_link_entity_view_1
-        - field_get_directions
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          wrapper: h3
+          class: ''
+          link: false
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.service_location.teaser
 targetEntityType: node
 bundle: service_location
@@ -50,7 +58,7 @@ mode: teaser
 content:
   field_building:
     type: entity_reference_entity_view
-    weight: 0
+    weight: 2
     region: content
     label: hidden
     settings:
@@ -59,7 +67,7 @@ content:
     third_party_settings: {  }
   field_floor:
     type: string
-    weight: 1
+    weight: 3
     region: content
     label: hidden
     settings:
@@ -67,20 +75,27 @@ content:
     third_party_settings: {  }
   field_open_hours:
     type: string
-    weight: 2
+    weight: 4
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
+  field_summary:
+    type: string
+    weight: 1
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   service_location_directions_link_entity_view_1:
-    weight: 3
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_legacy_path: true
-  field_summary: true
   links: true
   scheduled_publication: true
