--- a/web/sites/default/config/core.entity_view_display.node.city_service.sitewide_teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.sitewide_teaser.yml
@@ -1,9 +1,9 @@
-uuid: 7d5d80c4-ce10-4eee-b8a8-be3bcebb8589
+uuid: ff425781-f2c5-4b31-b8c7-7d8409c4d2e1
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.sitewide_teaser
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_legacy_path
@@ -23,18 +23,54 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.city_service.teaser
+id: node.city_service.sitewide_teaser
 targetEntityType: node
 bundle: city_service
-mode: teaser
+mode: sitewide_teaser
 content:
   field_summary:
-    type: string
-    weight: 1
-    region: content
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: lead
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+    type: string
+    region: content
+  field_topics:
+    type: entity_reference_label
+    weight: 1
+    region: content
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
@@ -43,9 +79,7 @@ hidden:
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
-  field_sections: true
   field_service_mode: true
   field_time_to_complete: true
-  field_topics: true
   links: true
   scheduled_publication: true
