--- a/web/sites/default/config/views.view.group_services.yml
+++ b/web/sites/default/config/views.view.group_services.yml
@@ -374,7 +374,7 @@ display:
       style:
         type: default
         options:
-          row_class: 'list-group-item mb-3'
+          row_class: ''
           default_row_class: false
           uses_fields: false
       row:
