--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -65,20 +65,17 @@ display:
             offset_label: Offset
           quantity: 9
       style:
-        type: html_list
+        type: default
         options:
-          row_class: 'list-group-item list-group-item-action mb-3'
-          default_row_class: true
+          row_class: ''
+          default_row_class: false
           uses_fields: false
-          type: ul
-          wrapper_class: ''
-          class: 'list-group col-12'
       row:
         type: search_api
         options:
           view_modes:
             'entity:node':
-              city_service: teaser
+              city_service: sitewide_teaser
       fields:
         title:
           id: title
