--- a/web/sites/default/config/core.entity_view_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - media.type.audio
   module:
     - text
-    - user
     - video_embed_field
 id: media.audio.default
 targetEntityType: media
@@ -52,14 +51,8 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  uid:
-    label: inline
-    type: author
-    weight: 4
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_media_in_library: true
   thumbnail: true
+  uid: true
