--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -20,7 +20,7 @@ bundle: document
 mode: default
 content:
   content_moderation_control:
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -58,7 +58,7 @@ content:
     region: content
   field_file_size:
     type: number_integer
-    weight: 5
+    weight: 4
     region: content
     label: hidden
     settings:
@@ -67,7 +67,7 @@ content:
     third_party_settings: {  }
   field_mime_type:
     type: string
-    weight: 6
+    weight: 5
     region: content
     label: hidden
     settings:
@@ -89,14 +89,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     region: content
-  uid:
-    type: entity_reference_label
-    weight: 4
-    region: content
-    label: inline
-    settings:
-      link: true
-    third_party_settings: {  }
 hidden:
   field_media_in_library: true
   thumbnail: true
+  uid: true
