--- a/web/sites/default/config/core.entity_view_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.default.yml
@@ -16,9 +16,14 @@ targetEntityType: media
 bundle: image
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   created:
     type: timestamp
-    weight: 2
+    weight: 3
     region: content
     label: inline
     settings:
@@ -28,7 +33,7 @@ content:
     third_party_settings: {  }
   image:
     type: responsive_image
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       responsive_image_style: paragraph_image
@@ -37,21 +42,13 @@ content:
     region: content
   name:
     type: string
-    weight: 0
+    weight: 1
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  uid:
-    type: entity_reference_label
-    weight: 3
-    region: content
-    label: inline
-    settings:
-      link: true
-    third_party_settings: {  }
 hidden:
-  content_moderation_control: true
   field_media_in_library: true
   thumbnail: true
+  uid: true
