--- a/web/sites/default/config/core.entity_view_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.default.yml
@@ -58,14 +58,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     region: content
-  uid:
-    type: entity_reference_label
-    weight: 5
-    region: content
-    label: inline
-    settings:
-      link: true
-    third_party_settings: {  }
 hidden:
   field_media_in_library: true
   thumbnail: true
+  uid: true
