--- a/web/sites/default/config/block.block.cloudy_editor_toolbar.yml
+++ b/web/sites/default/config/block.block.cloudy_editor_toolbar.yml
@@ -14,12 +14,12 @@ theme: cloudy
 region: global_admin
 weight: -13
 provider: null
-plugin: "system_menu_block:editor-toolbar"
+plugin: 'system_menu_block:editor-toolbar'
 settings:
-  id: "system_menu_block:editor-toolbar"
-  label: "Editor toolbar"
+  id: 'system_menu_block:editor-toolbar'
+  label: 'Editor toolbar'
   provider: system
-  label_display: "0"
+  label_display: '0'
   level: 1
   depth: 0
 visibility:
@@ -31,4 +31,4 @@ visibility:
       sitewide_editor: sitewide_editor
     negate: false
     context_mapping:
-      user: "@user.current_user_context:current_user"
+      user: '@user.current_user_context:current_user'
