--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -20,14 +20,14 @@ bundle: document
 mode: default
 content:
   content_moderation_control:
-    weight: 6
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
   created:
     label: inline
     type: timestamp
-    weight: 3
+    weight: 4
     settings:
       date_format: long
       custom_date_format: ''
@@ -42,7 +42,7 @@ content:
             classes: {  }
     region: content
   field_document:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       use_description_as_link_text: false
@@ -56,25 +56,8 @@ content:
             classes: {  }
     type: file_default
     region: content
-  field_file_size:
-    type: number_integer
-    weight: 4
-    region: content
-    label: hidden
-    settings:
-      thousand_separator: ''
-      prefix_suffix: true
-    third_party_settings: {  }
-  field_mime_type:
-    type: string
-    weight: 5
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -84,12 +67,14 @@ content:
   name:
     label: hidden
     type: string
-    weight: 0
+    weight: 1
     settings:
       link_to_entity: false
     third_party_settings: {  }
     region: content
 hidden:
+  field_file_size: true
   field_media_in_library: true
+  field_mime_type: true
   thumbnail: true
   uid: true
