--- a/web/sites/default/config/core.entity_view_display.node.city_service.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.search_result.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_legacy_path
+    - field.field.node.city_service.field_popular
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_reviewer
     - field.field.node.city_service.field_service_mode
@@ -15,7 +16,6 @@ dependencies:
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
-    - ds
     - panelizer
     - user
 third_party_settings:
@@ -30,44 +30,51 @@ bundle: city_service
 mode: search_result
 content:
   field_summary:
-    weight: 0
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings:
       ds:
         ft:
-          id: default
+          id: expert
           settings:
             lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
             lb-col: false
-            classes: {  }
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
     type: string
     region: content
-  field_topics:
-    type: entity_reference_label
-    weight: 1
-    region: content
-    label: hidden
-    settings:
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
 hidden:
   content_moderation_control: true
   field_audience: true
   field_community_actions: true
   field_legacy_path: true
+  field_popular: true
   field_related_content: true
   field_reviewer: true
   field_service_mode: true
   field_time_to_complete: true
+  field_topics: true
   links: true
   scheduled_publication: true
