--- a/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
@@ -8,13 +8,13 @@ dependencies:
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_related_content
-    - field.field.node.city_service.field_reviewer
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
     - field.field.node.city_service.field_time_to_complete
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
+    - ds
     - panelizer
     - user
 third_party_settings:
@@ -23,6 +23,33 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - node_title
+        - field_summary
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h2
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.city_service.teaser
 targetEntityType: node
 bundle: city_service
@@ -41,6 +68,7 @@ hidden:
   field_audience: true
   field_community_actions: true
   field_legacy_path: true
+  field_popular: true
   field_related_content: true
   field_reviewer: true
   field_sections: true
