--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -65,11 +65,14 @@ display:
             offset_label: Offset
           quantity: 9
       style:
-        type: default
+        type: html_list
         options:
-          row_class: ''
-          default_row_class: false
+          row_class: 'list-group-item list-group-item-action mb-3'
+          default_row_class: true
           uses_fields: false
+          type: ul
+          wrapper_class: ''
+          class: 'list-group col-12'
       row:
         type: search_api
         options:
