--- a/web/modules/custom/portland/portland.services.yml
+++ b/web/modules/custom/portland/portland.services.yml
@@ -10,12 +10,12 @@ services:
     arguments: ['@logger.factory']
 
   portland.fileSizeExtension:
-    class: Drupal\portland\TwigExtension\fileSizeExtension
+    class: Drupal\portland\fileSizeExtension
     tags:
       - { name: twig.extension }
 
   portland.fileIconExtension:
-    class: Drupal\portland\TwigExtension\fileIconExtension
+    class: Drupal\portland\fileIconExtension
     tags:
       - { name: twig.extension }
       
