--- a/composer.json
+++ b/composer.json
@@ -165,6 +165,9 @@
             },
             "drupal/groupmedia": {
                 "3020127 - Empty page when trying to create group node": "https://www.drupal.org/files/issues/2018-12-12/3020127-1.patch"
+            },
+            "drupal/embed": {
+                "2824110 - Allow site-builders to use a non-managed file as button icon": "https://www.drupal.org/files/issues/2018-07-03/embed-allow-non-managed-button-icon-files-2824110-9.patch"
             }
         },
         "merge-plugin": {
