--- a/web/themes/custom/cloudy/package.json
+++ b/web/themes/custom/cloudy/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.2.1",
     "css-loader": "^0.28.10",
+    "cssnano": "^4.0.0-rc.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "globby": "^8.0.1",
     "html-webpack-plugin": "^3.0.6",
