--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -50,8 +50,7 @@ content:
           settings:
             lb: ''
             prefix: ''
-            lbw: true
-            lbw-el: label
+            lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
             ow-el: ''
@@ -61,10 +60,11 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: p
-            fi-cl: page-type
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light mb-1 order-1 align-self-start'
             fi-at: ''
             suffix: ''
+            lbw: false
             lb-col: false
             ow: false
             ow-def-at: false
