--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "drupal/adminimal_admin_toolbar": "^1.5",
         "drupal/adminimal_theme": "^1.3",
         "drupal/allowed_formats": "^1.1",
+        "drupal/bootstrap_barrio": "^4.15",
         "drupal/bootstrap_library": "^1.11",
         "drupal/anonymous_login": "^1.1",
         "drupal/chosen": "^2.5",
