--- a/web/themes/custom/cloudy/package.json
+++ b/web/themes/custom/cloudy/package.json
@@ -22,11 +22,11 @@
     "bootstrap": "^4.2.1",
     "css-loader": "^0.28.10",
     "cssnano": "^4.0.0-rc.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "globby": "^8.0.1",
     "html-webpack-plugin": "^3.0.6",
     "import-glob-loader": "^1.1.0",
     "jquery": "^3.3.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.10.0",
     "popper.js": "^1.0.1",
     "postcss": "^6.0.19",
