--- a/web/sites/default/config/field.field.node.building.field_address.yml
+++ b/web/sites/default/config/field.field.node.building.field_address.yml
@@ -25,18 +25,19 @@ default_value_callback: ''
 settings:
   available_countries:
     US: US
-  fields:
-    administrativeArea: administrativeArea
-    locality: locality
-    postalCode: postalCode
-    addressLine1: addressLine1
-    addressLine2: addressLine2
-    dependentLocality: '0'
-    sortingCode: '0'
-    organization: '0'
-    givenName: '0'
-    additionalName: '0'
-    familyName: '0'
   langcode_override: ''
-  field_overrides: {  }
+  field_overrides:
+    givenName:
+      override: hidden
+    additionalName:
+      override: hidden
+    familyName:
+      override: hidden
+    organization:
+      override: optional
+    sortingCode:
+      override: hidden
+    dependentLocality:
+      override: hidden
+  fields: {  }
 field_type: address
